# gstreamer-gtk4-rust-app

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/gstmodule/: gstmanager.rs  mod.rs
